# flow-maestro

./: .gitignore  AGENTS.md  ONBOARDING_UPDATE_SUMMARY.md  QUICK_START.md  README.md  RELEASE_LOG.md  SYSTEM_PROMPT.md  handoff_prompt.md  pyproject.toml  sample_full_spec.md
.factory/: commands
.flow-maestro/: MANIFEST.json  README.md  cursor.json
.flow-maestro/commands/: code_review.md  completion.md  logging.md  onboarding.md  resume.md  task_creation.md
.flow-maestro/protocols/: parent-child-information-flow.md  universal-task-template.md
.flow-maestro/templates/prp-templates/: create-prp-guide.md  prp-template.md
.github/workflows/: release.yml
commands/: blueprint.md  code_review.md  completion.md  create_prp.md  ideate.md  launch.md  logging.md  onboarding.md  plan.md  progress.md  qa.md  resume.md  review.md  seal.md  startup.md  task_creation.md  work.md
protocols/: parent-child-information-flow.md  shared-templates.md  strategos-prime.md  sub-issue-governance.md  universal-agent.md  universal-task-template.md
scripts/: autopost.py  create_release.py
src/flowm_cli/: __init__.py  changes.py  cli.py  constants.py  core.py  install.py  projects.py  quality.py  research.py  specs.py  state.py  templates.py  timeline.py  utils.py
templates/linear-macros/: progress-log.json  review-report.json  seal-summary.json
templates/prp-templates/: prp-template.md
tests/: conftest.py  test_core.py  test_projects.py  test_specs_workflow.py  test_state.py
work/prps/: flow-maestro-installer-prp.md
