[project]
name = "flowm-cli"
version = "0.4.4"
description = "Flow Maestro installer CLI (flowm): install/update .flow-maestro assets from GitHub Releases"
requires-python = ">=3.11"
dependencies = [
  "typer",
  "rich",
  "httpx[socks]",
  "platformdirs",
  "truststore>=0.10.4",
]

[project.scripts]
flowm = "flowm_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowm_cli"]
